<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.saran.test.retroapp.MainActivity">

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        />

    <EditText
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner"
        android:hint="@string/location"
        android:layout_marginTop="@dimen/space10"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/location"
        android:hint="@string/notes"
        android:id="@+id/notes"
        android:layout_marginTop="@dimen/space10"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/notes"
        android:id="@+id/imglayout"
        android:layout_marginTop="@dimen/space10">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/imgbtn"
            android:text="@string/takeimg"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:src="@mipmap/ic_launcher"
            android:id="@+id/imgview"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/space1"
        android:layout_marginTop="@dimen/space10"
        android:layout_below="@id/imglayout"
        android:background="@color/grey"
        android:id="@+id/separator"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_below="@id/separator"
        android:layout_marginTop="@dimen/space10"
        android:id="@+id/name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_below="@id/name"
        android:inputType="textEmailAddress"
        android:layout_marginTop="@dimen/space10"
        android:id="@+id/email"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:id="@+id/phone"
        android:inputType="phone"
        android:layout_marginTop="@dimen/space10"
        android:hint="@string/phone"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/phone"
        android:layout_marginTop="@dimen/space10">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/check"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space10"
            android:text="@string/agreement" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:id="@+id/send"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/space15"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>
